--- a/src/main/resources/templates/channels.html
+++ b/src/main/resources/templates/channels.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <title>Channels</title>
-        <link rel="stylesheet" type="text/css" href="/styles.css">
-    </head>
-    <body>
-          <h1>Channels</h1>
-         <form th:action="@{/createChannel}" method="post">
-               <label>Channel Name:</label>
-               <input th:field="${channel.channelName}" type="text" id="channelName" required/>
-              <button id="createChannelBtn" type="submit">Create Channel</button>
-          </form>
-         <div>
-             <ul th:each="channel : ${channels}">
-                 <li><a th:href="@{/channels/{id}(id=${channel.channelId})}" th:text="${channel.channelName}"></a></li>
-             </ul>
-         </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Channels</title>
+    <link rel="stylesheet" type="text/css" href="/styles.css">
+</head>
+<body>
+<div class="container">
+    <h1>Channels</h1>
+    <h2>Create a channel!</h2>
+    <form th:action="@{/createChannel}" method="post">
+        <div>
+            <label>Channel Name:</label>
+            <input th:field="${channel.channelName}" type="text" id="channelName" required/>
+            <button id="createChannelBtn" type="submit" class="btn">Create Channel</button>
+        </div>
+    </form>
+    <div>
+        <ul th:each="channel : ${channels}">
+            <li><a th:href="@{/channels/{id}(id=${channel.channelId})}" th:text="${channel.channelName}"></a></li>
+        </ul>
+    </div>
+</div>
+</body>
 </html>
